<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/personal_list"
            android:layout_below="@+id/personal_info_text_goals"
            android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_list"
            android:id="@+id/personal_info_options"
            android:layout_weight="3">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/personal_editText"
                android:paddingTop="20dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/personal_add_button"
                android:text="Add"
                android:layout_below="@+id/personal_editText"/>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/personal_radio_group"
                android:layout_below="@+id/personal_editText"
                android:layout_toRightOf="@id/personal_add_button">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_goals"
                    android:text="@string/personal_goals"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_challenges"
                    android:text="@string/personal_challenges"
                    android:checked="false"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_scores"
                    android:text="@string/personal_scores"
                    android:checked="false"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_timers"
                    android:text="@string/personal_timers"
                    android:checked="false"/>

            </RadioGroup>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>