<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/videofragment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:id="@+id/collections_fanart_text"
                android:text="@string/collections_fanart"
                android:layout_below="@+id/videofragment"/>

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/collections_fanart_text"
                android:id="@+id/collections_fanrt_grid_container">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/collections_fanart_grid"/>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:id="@+id/collections_boxart_text"
                android:text="@string/collections_boxart"
                android:layout_below="@+id/collections_fanrt_grid_container"/>

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/collections_boxart_text"
                android:id="@+id/collections_boxart_grid_container">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/collections_boxart_grid"/>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:id="@+id/collections_screens_text"
                android:text="@string/collections_screens"
                android:layout_below="@+id/collections_boxart_grid_container"/>
            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/collections_screens_text"
                android:id="@+id/collections_screenshots_grid_container">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/collections_screenshots_grid"/>
            </HorizontalScrollView>

        </RelativeLayout>

</ScrollView>

